--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ header .site-title {
 }
 header .site-title.dot:after {
   content: "";
-  background-color: #FF5959;
+  background-color: #4bed32;
   border-radius: 50%;
   display: inline-block;
   margin-left: 5px;
@@ -334,7 +334,7 @@ header .copyright {
 }
 .mobile-header .site-title.dot:after {
   content: "";
-  background-color: #FF5959;
+  background-color: #4bed32;
   border-radius: 50%;
   display: inline-block;
   margin-left: 5px;
@@ -410,7 +410,7 @@ main.content.push {
 }
 .hero .cta h1 .dot:after {
   content: "";
-  background-color: #FF5959;
+  background-color: #4bed32;
   border-radius: 50%;
   display: inline-block;
   margin-left: 5px;
